# Calc_training_project

./: README.md
code-samples/: main.c
data-samples/: color.h
datasets/object/: test
src/: Calc.h  Makefile
src/CALC/: CMakeLists.txt  credit.cpp  credit.h  credit.ui  debit.cpp  debit.h  debit.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qcustomplot.cpp  qcustomplot.h
src/Functions/: Calc.c  Credit.c  Debit.c  Display.c  Notation.c  Parser.c  PrintStack.c  Stack.c  Validator.c
src/Tests/: Test.c
